[package]
name = "hyper-test"
version = "0.1.0"
edition = "2021"

[dependencies]
http-request = "8.49.1"
hyper = { version = "0.14.32", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"